--- a/MCWrapperWebApp/appsettings.json
+++ b/MCWrapperWebApp/appsettings.json
@@ -4,5 +4,22 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  // RpcOptions start here
+  "ChainPassword": "EmjbtUBfbg2SikAXVnAJSQKmbeZhxbpSopsVKk58zrE",
+  "ChainUsername": "multichainrpc",
+  "ChainHostname": "localhost",
+  "ChainRpcPort": 7764,
+  "ChainSslPath": "",
+  "ChainUseSsl": false,
+
+  // values shared between RpcOptions and CliOptions
+  "ChainName": "NewChain",
+  "ChainAdminAddress": "1F5WvCAwc9sX6ZMJKE8GRZA6UQQPnxgB8FbU7t",
+  "ChainBurnAddress": "1XXXXXXXDXXXXXXX7bXXXXXXVsXXXXXXXCT2tS",
+
+  // CliOptions start here, we leave them empty to indicat default locations should be used
+  "ChainDefaultColdNodeLocation": "",
+  "ChainDefaultLocation": "",
+  "ChainBinaryLocation": ""
 }
